rarian to depends_lib, needed during post-activate
git-svn-id: https://svn.macports.org/repository/macports/trunk@69639 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/gnome/gtk-doc/Portfile
+++ b/dports/gnome/gtk-doc/Portfile
@@ -23,13 +23,14 @@ checksums           md5     c022788b1fbbec30d55df4ccb34eeb90 \
                     sha1    fc1c593e8107cbe33451e3e938ca14b59104e999 \
                     rmd160  142ad9dca015ba69261fe44847f3a27721e06551
 
-depends_build   port:rarian \
-                port:gnome-doc-utils \
+depends_build   port:gnome-doc-utils \
                 port:pkgconfig \
                 port:docbook-xml \
                 port:docbook-xsl
 
-depends_lib     port:libxml2 \
+# rarian is needed during post-activate
+depends_lib     port:rarian \
+                port:libxml2 \
                 path:lib/pkgconfig/glib-2.0.pc:glib2 \
                 path:bin/perl:perl5
 
