mesa: Bump to 7.8.2
git-svn-id: https://svn.macports.org/repository/macports/trunk@69640 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/x11/mesa/Portfile
+++ b/dports/x11/mesa/Portfile
@@ -4,8 +4,7 @@
 PortSystem          1.0
 
 name                mesa
-version             7.8.1
-revision            1
+version             7.8.2
 categories          x11 graphics
 maintainers         jeremyhu openmaintainer
 description         Mesa 3D Graphics Library
@@ -21,18 +20,15 @@ platforms           macosx darwin
 use_bzip2           yes
 master_sites        http://www.buraphalinux.org/download/bls1.4/dvd/source/x11/xserver/mesa/:mesa \
                     ftp://ftp.freedesktop.org/pub/mesa/${version}/:mesa
-checksums           MesaLib-7.8.1.tar.bz2 \
-                    md5     25ec15f8e41fde6d206118cc786dbac4 \
-                    sha1    1c15c62f845ef9b648366aa804410f68f7f79172 \
-                    rmd160  b7b989342dc80a2a12456c17882e652db7bd86cd \
-                    MesaGLUT-7.8.1.tar.bz2 \
-                    md5     6bae516a44c6d26ff3152c960ab648e7 \
-                    sha1    192a4c33cb5841b3ffaa282fc2fb258b064488ad \
-                    rmd160  0592c2b0a7cd3eb9abacf8d0a3a8314abac2ff44 \
-                    MesaDemos-7.8.1.tar.bz2 \
-                    md5     9ef47f911869657c6bf2f43ebce86b61 \
-                    sha1    42618c17fb7be6d96ef73ff007e41aac5d3ded65 \
-                    rmd160  f22b6619a30e581e1d7388fec62cba5ed0ca9578
+checksums           MesaLib-7.8.2.tar.bz2 \
+                    sha1    21de672a1cbe307135d7f172dc6952041a38e1c7 \
+                    rmd160  d06c95bc36304b8ef72211b5defd3ac338fe7956 \
+                    MesaGLUT-7.8.2.tar.bz2 \
+                    sha1    9592ea7778b38e9b7e35532e83d0ae170af3e85e \
+                    rmd160  0198676f3277fa6ef681e40e388fa5d69d86a25e \
+                    MesaDemos-7.8.2.tar.bz2 \
+                    sha1    90879578b11b2d043b378818d2c6750fe47518b7 \
+                    rmd160  a815ab8ee22c1a54110c568dcedd10524b00d612
 
 # glut port is here to "clean out" the glut port if it's installed to avoid conflict
 depends_build \
@@ -93,8 +89,6 @@ build.args-append \
     CC="${configure.cc} ${configure.cppflags}" \
     CXX="${configure.cxx} ${configure.cppflags}"
 
-default_variants +hw_render
-
 post-extract {
 	if {! [file exists "${worksrcpath}/configs/current"]} {
 		ln -s darwin ${worksrcpath}/configs/current
@@ -121,15 +115,8 @@ post-destroot {
 	delete "${destroot}${prefix}/include/GL/wglew.h"
 }
 
-variant hw_render description {Install a libGL.dylib that uses OpenGL.framework to allow rendering on your graphics hardware} {
-    patchfiles-append \
-        0001-apple-Initial-import-of-libGL-for-OSX-from-AppleSGLX.patch \
-        0002-apple-Remove-duplicate-headers-that-already-exist-in.patch \
-        0003-apple-Change-ifdefs-for-DRI-to-be-DRI-APPLE.patch \
-        0004-darwin-Use-clientattrib.patch \
-        0005-apple-Integrate-our-libGL-into-the-existing-build-sy.patch \
-        0006-apple-Use-mesa-gl.h-rather-than-generating-one.patch \
-        0007-Use-X_LIBS-from-pkg-config-instead-of-libdir-for-loc.patch
+variant iglx description {Install a libGL that uses your X11 server's indirect GLX path for rendering (the default is off which allows libGL to accelerate rendering using OpenGL.framework)} {
+        reinplace "s:src/glx/apple:src/glx:" ${worksrcpath}/configs/darwin
 }
 
 platform darwin 8 {
