mesa: Don't include glxinfo and glxgears any more, they will be separate ports
git-svn-id: https://svn.macports.org/repository/macports/trunk@69641 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/x11/mesa/Portfile
+++ b/dports/x11/mesa/Portfile
@@ -5,6 +5,7 @@ PortSystem          1.0
 
 name                mesa
 version             7.8.2
+revision            1
 categories          x11 graphics
 maintainers         jeremyhu openmaintainer
 description         Mesa 3D Graphics Library
@@ -13,22 +14,23 @@ long_description    Mesa is an open-source implementation of the OpenGL specific
 homepage            http://mesa3d.sourceforge.net/
 distfiles           MesaLib-${version}.tar.bz2:mesa \
                     MesaGLUT-${version}.tar.bz2:mesa \
-                    MesaDemos-${version}.tar.bz2:mesa
+                    MesaApple-${version}.tar.bz2:xquartz
 
 worksrcdir          Mesa-${version}
 platforms           macosx darwin
 use_bzip2           yes
 master_sites        http://www.buraphalinux.org/download/bls1.4/dvd/source/x11/xserver/mesa/:mesa \
-                    ftp://ftp.freedesktop.org/pub/mesa/${version}/:mesa
+                    ftp://ftp.freedesktop.org/pub/mesa/${version}/:mesa \
+                    http://static.macosforge.org/xquartz/downloads/src/:xquartz
 checksums           MesaLib-7.8.2.tar.bz2 \
                     sha1    21de672a1cbe307135d7f172dc6952041a38e1c7 \
                     rmd160  d06c95bc36304b8ef72211b5defd3ac338fe7956 \
                     MesaGLUT-7.8.2.tar.bz2 \
                     sha1    9592ea7778b38e9b7e35532e83d0ae170af3e85e \
                     rmd160  0198676f3277fa6ef681e40e388fa5d69d86a25e \
-                    MesaDemos-7.8.2.tar.bz2 \
-                    sha1    90879578b11b2d043b378818d2c6750fe47518b7 \
-                    rmd160  a815ab8ee22c1a54110c568dcedd10524b00d612
+                    MesaApple-7.8.2.tar.bz2 \
+                    sha1    476f177ec6cbe8d5718a2109516a5121ab1574d2 \
+                    rmd160  c2dd3363883c5826a9797ef631f668958660e740
 
 # glut port is here to "clean out" the glut port if it's installed to avoid conflict
 depends_build \
@@ -105,14 +107,12 @@ post-patch {
 }
 
 post-destroot {
-	xinstall -m 755 -W "${worksrcpath}/progs/xdemos" glxgears glxinfo "${destroot}${prefix}/bin"
-
 	# http://trac.macports.org/ticket/24337
 	# http://trac.macports.org/ticket/24349
 	# mesa just installs all headers from GL/*.h
-	delete "${destroot}${prefix}/include/GL/glew.h"
-	delete "${destroot}${prefix}/include/GL/glxew.h"
-	delete "${destroot}${prefix}/include/GL/wglew.h"
+	#delete "${destroot}${prefix}/include/GL/glew.h"
+	#delete "${destroot}${prefix}/include/GL/glxew.h"
+	#delete "${destroot}${prefix}/include/GL/wglew.h"
 }
 
 variant iglx description {Install a libGL that uses your X11 server's indirect GLX path for rendering (the default is off which allows libGL to accelerate rendering using OpenGL.framework)} {
