--- a/dports/x11/xorg-apps/Portfile
+++ b/dports/x11/xorg-apps/Portfile
@@ -2,7 +2,7 @@
 
 PortSystem 1.0
 name		xorg-apps
-version		20090102
+version		20100711
 categories	x11
 maintainers	jeremyhu openmaintainer
 description	X.org apps meta-package
@@ -19,6 +19,8 @@ depends_run \
     port:fonttosfnt \
     port:fslsfonts \
     port:fstobdf \
+    port:glxgears \
+    port:glxinfo \
     port:iceauth \
     port:ico \
     port:listres \
