glxinfo: Share distfile with other mesa-demos projects
git-svn-id: https://svn.macports.org/repository/macports/trunk@69645 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/x11/glxinfo/Portfile
+++ b/dports/x11/glxinfo/Portfile
@@ -13,6 +13,7 @@ long_description    ${description}
 
 homepage            http://mesa3d.sourceforge.net/
 distname            ${pkg_name}-${version}
+dist_subdir         ${pkg_name}
 
 platforms           macosx darwin
 use_bzip2           yes
