--- a/dports/x11/glxgears/Portfile
+++ b/dports/x11/glxgears/Portfile
@@ -13,6 +13,7 @@ long_description    ${description}
 
 homepage            http://mesa3d.sourceforge.net/
 distname            ${pkg_name}-${version}
+dist_subdir         ${pkg_name}
 
 platforms           macosx darwin
 use_bzip2           yes
