kdelibs3: Allow building with OpenSSL 1.0.0. (#25628)
git-svn-id: https://svn.macports.org/repository/macports/trunk@69647 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/kde/kdelibs3/Portfile
+++ b/dports/kde/kdelibs3/Portfile
@@ -6,7 +6,7 @@ PortSystem              1.0
 
 name                    kdelibs3
 version                 3.5.10
-revision                8
+revision                9
 set kdeadmin            kde-admindir-1502
 categories              kde kde3
 maintainers             nomaintainer
@@ -82,7 +82,9 @@ patchfiles              kdelibs3-unified.patch \
                         patch-kio_misc_kpac_configure.in.in.diff \
                         patch-kio_misc_kpac_discovery.cpp.diff \
                         patch_kinit_lnusertemp.c.diff \
-                        oCERT-2009-015.patch
+                        oCERT-2009-015.patch \
+                        kdelibs-3.5.10-ossl-1.x.patch \
+                        patch-kio_misc_kssld_Makefile.am.diff
 
 patch {
     foreach f $patchfiles {
