add lib dependency on xorg-xcb-util
git-svn-id: https://svn.macports.org/repository/macports/trunk@69648 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/x11/xlsclients/Portfile
+++ b/dports/x11/xlsclients/Portfile
@@ -20,7 +20,7 @@ checksums           md5     550a0fee047c5043f2cbf190b41f8a1b \
 
 depends_build       port:pkgconfig
 
-depends_lib         port:xorg-libxcb
+depends_lib         port:xorg-libxcb port:xorg-xcb-util
 
 # Remove for 1.1.1 or later
 post-patch {
