mesa: Fix universal build, bug #25641
git-svn-id: https://svn.macports.org/repository/macports/trunk@69649 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/x11/mesa/Portfile
+++ b/dports/x11/mesa/Portfile
@@ -5,7 +5,7 @@ PortSystem          1.0
 
 name                mesa
 version             7.8.2
-revision            1
+revision            2
 categories          x11 graphics
 maintainers         jeremyhu openmaintainer
 description         Mesa 3D Graphics Library
@@ -14,7 +14,7 @@ long_description    Mesa is an open-source implementation of the OpenGL specific
 homepage            http://mesa3d.sourceforge.net/
 distfiles           MesaLib-${version}.tar.bz2:mesa \
                     MesaGLUT-${version}.tar.bz2:mesa \
-                    MesaApple-${version}.tar.bz2:xquartz
+                    MesaApple-${version}-r1.tar.bz2:xquartz
 
 worksrcdir          Mesa-${version}
 platforms           macosx darwin
@@ -28,9 +28,9 @@ checksums           MesaLib-7.8.2.tar.bz2 \
                     MesaGLUT-7.8.2.tar.bz2 \
                     sha1    9592ea7778b38e9b7e35532e83d0ae170af3e85e \
                     rmd160  0198676f3277fa6ef681e40e388fa5d69d86a25e \
-                    MesaApple-7.8.2.tar.bz2 \
-                    sha1    476f177ec6cbe8d5718a2109516a5121ab1574d2 \
-                    rmd160  c2dd3363883c5826a9797ef631f668958660e740
+                    MesaApple-7.8.2-r1.tar.bz2 \
+                    sha1    301808a80f4cdd7a9b9bf7e8e0d32e668bcd3f7d \
+                    rmd160  3a5091773e940a1e7b4857d8823d84287d0f56b5
 
 # glut port is here to "clean out" the glut port if it's installed to avoid conflict
 depends_build \
