glib2-devel: update to 2.25.11, adding upstream patch to disable dtrace usage that is not compatible with Mac OS X
git-svn-id: https://svn.macports.org/repository/macports/trunk@69652 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/devel/glib2-devel/Portfile
+++ b/dports/devel/glib2-devel/Portfile
@@ -6,7 +6,7 @@ PortGroup                   archcheck 1.0
 name                        glib2-devel
 conflicts                   glib2
 set my_name                 glib
-version                     2.25.7
+version                     2.25.11
 set branch                  [join [lrange [split ${version} .] 0 1] .]
 categories                  devel
 maintainers                 ryandesign
@@ -27,13 +27,14 @@ long_description            Glib is a library which includes support routines \
 master_sites                gnome:sources/${my_name}/${branch}/ \
                             ftp://ftp.gtk.org/pub/${my_name}/${branch}/
 
-checksums                   md5     ac4867b9450f8bf5f1075336a32a1a88 \
-                            sha1    8423e1f5346ecc629e85adfe5498c2545de421ef \
-                            rmd160  7c16e4c4e133aee02625c6e5dfb430736b4de33e
+checksums                   md5     19f76d17ca65f70f9b36daf8b1e57673 \
+                            sha1    3794dac04e4a4c5dabf2452d1d7e98b3d0c83edb \
+                            rmd160  a949384227eaa7491c2fa903d84771ea3be00215
 
 # ${prefix}/include/glib-2.0/glib/gi18n.h requires -I${prefix}/include to find libintl.h
 # See http://trac.macports.org/changeset/27148
 patchfiles                  patch-configure.in.diff \
+                            patch-configure.in-dtrace.diff \
                             patch-glib-2.0.pc.in.diff \
                             patch-glib_gunicollate.c.diff \
                             patch-gi18n.h.diff \
