claws-mail: maintainer update to 3.7.6; see #25572
git-svn-id: https://svn.macports.org/repository/macports/trunk@69653 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/mail/claws-mail/Portfile
+++ b/dports/mail/claws-mail/Portfile
@@ -3,7 +3,7 @@
 PortSystem 1.0
 
 name            claws-mail
-version         3.7.5
+version         3.7.6
 categories      mail news
 maintainers     vlado-do.de:rechner openmaintainer
 description     A lightweight and very featureful GTK+ based e-mail and news client
@@ -16,9 +16,10 @@ long_description Currently, many features are supported in Claws Mail \
 homepage        http://www.claws-mail.org/
 platforms       darwin
 master_sites    sourceforge:sylpheed-claws
-checksums       md5     05a97ef3bf41ae5e6e2a3ddeb600ab44 \
-		sha1    627c6b297dde7f1d4f2798d3bdbda2d0436421b7 \
-		rmd160  06ac2bd594d184ed6b5141f4f00e3508b93657b2
+
+checksums       md5     09c150cf13c04201c92089fc285cecd9 \
+                sha1    42aa1125403c46693b1c45b9d2b5ffc5496b6340 \
+                rmd160  0fdf22972cd6ce5dbb9411463e9a6b1040253843
 
 use_bzip2       yes
 
@@ -34,3 +35,5 @@ configure.args --disable-jpilot \
                --disable-trayicon-plugin \
                --enable-ipv6 \
                --enable-crash-dialog
+
+use_autoconf    yes
