--- a/dports/python/py26-logilab-common/Portfile
+++ b/dports/python/py26-logilab-common/Portfile
@@ -13,7 +13,8 @@ long_description    ${description}
 platforms           darwin
 
 homepage            http://www.logilab.org/project/logilab-common
-master_sites        ftp://ftp.logilab.fr/pub/common/
+master_sites        http://ftp.logilab.org/pub/common \
+                    ftp://ftp.logilab.fr/pub/common
 distname            logilab-common-${version}
 
 checksums           md5     b3ac2d2d3cc690c9446749048c177560 \
