lang/ruby19: fix #25611, build failure with openssl 1.0.0
git-svn-id: https://svn.macports.org/repository/macports/trunk@69657 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/lang/ruby19/Portfile
+++ b/dports/lang/ruby19/Portfile
@@ -45,7 +45,12 @@ configure.args		--enable-shared \
 #         SocketError "getaddrinfo: nodename nor servname provided, or not
 #         known (SocketError)"
 #         http://redmine.ruby-lang.org/issues/show/3124
-patchfiles			patch-ruby_core_29427.diff
+#         (note: 1.9.2 does not need this patch)
+# #25611: build failure with openssl 1.0.0
+#         patch from http://redmine.ruby-lang.org/issues/show/2022
+#         (note: 1.9.2 does not need this patch)
+patchfiles			patch-ruby_core_29427.diff \
+					patch-bug25611.diff
 
 # Ignore minor version for archdir, like i686-darwin9.
 # Port "ruby" does the same.
