Better solution for patching 'configure' and 'config/Makefile.config' to find Qt includes and libraries, and to properly include them when compiling and linking.  Addresses ticket #25612.
git-svn-id: https://svn.macports.org/repository/macports/trunk@69658 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/science/root/Portfile
+++ b/dports/science/root/Portfile
@@ -5,7 +5,7 @@ PortSystem          1.0
 
 name                root
 version             5.26.00b
-revision            4
+revision            5
 categories          science
 maintainers         gmail.com:mattiafrancescomoro
 license             LGPLv2.1
@@ -29,9 +29,6 @@ depends_lib         port:freetype \
                     port:xpm \
                     port:zlib
 
-# patches to allow 'configure' to find Qt framework libraries and 'moc'
-patchfiles          patch-configure.diff
-
 pre-configure {
     build.args      CC=${configure.cc} \
                     CXX=${configure.cxx} \
@@ -52,13 +49,12 @@ pre-configure {
 }
 
 configure.args      --with-cc=${configure.cc} \
-                    --with-f77="${configure.f77}" \
-                    --with-cxx="${configure.cxx}" \
-                    --etcdir="${prefix}/etc/root" \
-                    --docdir="${prefix}/share/doc/${name}-${version}"\
-                    --libdir="${prefix}/lib/root" \
-                    --testdir="${prefix}/share/root/test" \
-                    --tutdir="${prefix}/share/root/tutorials" \
+                    --with-f77=${configure.f77} \
+                    --with-cxx=${configure.cxx} \
+                    --docdir=${prefix}/share/doc/${name}-${version} \
+                    --libdir=${prefix}/lib/root \
+                    --testdir=${prefix}/share/root/test \
+                    --tutdir=${prefix}/share/root/tutorials \
                     --etcdir=${prefix}/etc/root \
                     --disable-builtin-afterimage \
                     --disable-builtin-freetype \
@@ -74,11 +70,12 @@ configure.args      --with-cc=${configure.cc} \
                     --disable-opengl \
                     --disable-pythia8 \
                     --disable-qt \
+                    --disable-qtgsi \
                     --disable-roofit \
                     --disable-ssl \
                     --disable-xml \
-                    --with-x11-libdir="${prefix}/lib" \
-                    --with-xpm-libdir="${prefix}/lib"
+                    --with-x11-libdir=${prefix}/lib \
+                    --with-xpm-libdir=${prefix}/lib
 
 universal_variant   no
 
@@ -165,28 +162,47 @@ variant xml description {Builds port with xml support} {
 }
 
 variant qt_x11 conflicts qt_mac description {Builds port with Qt support via X11 UI} {
+    # fix where "qglobal.h" is found in all files that use or reference it
+    post-patch {
+        foreach tpf { configure graf2d/qt/src/TGQt.cxx } {
+            reinplace "s@Qt/qglobal\\.h@QtCore/qglobal\\.h@g" \
+                ${worksrcpath}/${tpf}
+        }
+        reinplace "/qttestdir/s@Qt@QtCore@g" ${worksrcpath}/configure
+    }
+
+    configure.env-append    QTDIR=${prefix}/libexec/qt4-x11
     configure.args-delete   --disable-qt
-    configure.args-append   --enable-qt \
-                            --with-qt-incdir="${prefix}/libexec/qt4-x11/include/" \
-                            --with-qt-libdir="${prefix}/libexec/qt4-x11/lib" \
-			    --with-mocdir="${prefix}/bin"
+    configure.args-append   --enable-qt
     depends_lib-append      port:qt4-x11
 }
 
 variant qt_mac conflicts qt_x11 description {Builds port with Qt support via Mac UI} {
+    post-patch {
+        # fix where "qglobal.h" is found in all files that use or reference it
+        foreach tpf { configure graf2d/qt/src/TGQt.cxx } {
+            reinplace "s@Qt/qglobal\\.h@QtCore/qglobal\\.h@g" \
+                ${worksrcpath}/${tpf}
+        }
+        reinplace "/qttestdir/s@Qt@QtCore@g" ${worksrcpath}/configure
+
+        # fix library search extensions to include ".la"
+        # for Qt framework libraries (only)
+        reinplace "s@\\(\\.so \\.sl \\.dylib \\.dll\\.a\\)@\\1 \\.la@g" \
+            ${worksrcpath}/configure
+    }
+
+    configure.env-append    QTDIR=${prefix}/libexec/qt4-mac
     configure.args-delete   --disable-qt
-    configure.args-append   --enable-qt \
-                            --with-qt-incdir="${prefix}/libexec/qt4-mac/include/" \
-                            --with-qt-libdir="${prefix}/libexec/qt4-mac/lib" \
-			    --with-mocdir="${prefix}/bin"
+    configure.args-append   --enable-qt
     depends_lib-append      port:qt4-mac
 
     post-configure {
         # patch up the Makefile.config to handle the QTLIB frameworks correctly
-        # first, patch using @PREFIX@
-        system "cd ${worksrcpath} && patch -p0 < ${filespath}/patch-config-Makefile.config.diff"
-        # then replace @PREFIX@ with ${prefix}
-        reinplace "s|@PREFIX@|${prefix}|g" ${worksrcpath}/config/Makefile.config
+        reinplace "/QTLIB\[ \]/s@:= @:= -F${prefix}/libexec/qt4-mac/lib @" \
+            ${worksrcpath}/config/Makefile.config
+        reinplace "/QTLIB\[ \]/s@\\(Qt\[^ \]*\\).la@-framework \\1@g" \
+            ${worksrcpath}/config/Makefile.config
     }
 }
 
