Update py-2{5|6}-openopt to version 0.29
git-svn-id: https://svn.macports.org/repository/macports/trunk@69659 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/python/py26-openopt/Portfile
+++ b/dports/python/py26-openopt/Portfile
@@ -5,7 +5,7 @@ PortSystem          1.0
 PortGroup           python26 1.0
 
 name                py26-openopt
-version             0.25
+version             0.29
 categories-append   math science
 maintainers         mnick
 description         Numerical optimization framework for python
@@ -17,14 +17,14 @@ platforms           darwin
 license             BSD
 
 homepage            http://openopt.org
-master_sites        ftp://ftp.linux.kiev.ua/pub/projects/openopt/download/
-distname            OpenOpt${version}
+master_sites        http://openopt.org/images/3/33/
+distname            OpenOpt
 use_zip             yes
 worksrcdir          OpenOpt
 
-checksums           md5     b8578ac8747e2fe4efa8001e834e7a60 \
-                    sha1    e37b0ea28cdefa9b3962d2d6a9deef4898f3cb34 \
-                    rmd160  6efbaf07ddb5aa4d3003c37d80bcb4944d9f1f2e
+checksums           md5     e2cf031a18616c26cdd7d0a4615ef8d8 \
+                    sha1    f60213b5c01e133b3c06a9698b34484fe1948f2e \
+                    rmd160  c7e23f95fdfd4af7c5df960e23641fc1d6a784ba
 
 depends_lib-append  port:py26-numpy
 
