xchat2: Revision bump to force rebuild against openssl
git-svn-id: https://svn.macports.org/repository/macports/trunk@69660 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/irc/xchat2/Portfile
+++ b/dports/irc/xchat2/Portfile
@@ -5,6 +5,7 @@ PortSystem          1.0
 
 name                xchat2
 version             2.8.8
+revision            1
 set branch          [join [lrange [split ${version} .] 0 1] .]
 categories          irc
 maintainers         afb openmaintainer
@@ -39,10 +40,18 @@ configure.cppflags-append   -no-cpp-precomp
 
 configure.args      --disable-python --disable-mmx --enable-ipv6
 
-variant xft conflicts quartz { configure.args-append --enable-xft }
-variant ssl { configure.args-append --enable-openssl }
+variant xft conflicts quartz { 
+    configure.args-append --enable-xft
+}
 
-variant quartz conflicts xft { configure.args-append --disable-xlib }
+variant ssl { 
+    configure.args-append --enable-openssl
+    depends_lib-append port:openssl
+}
+
+variant quartz conflicts xft {
+    configure.args-append --disable-xlib
+}
 
 livecheck.url       http://www.xchat.org/files/source/${branch}/?S=D
 livecheck.regex     xchat-(\[0-9.\]+)${extract.suffix}
