xchat2:  * remove sha256 checksum (doesn't work in 1.9.1)  * add build dep on pkgconfig  * ensure that openssl support is disabled when the ssl variant is not set  * add openssl dependency in ssl variant  * add variant descriptions
git-svn-id: https://svn.macports.org/repository/macports/trunk@69662 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/irc/xchat2/Portfile
+++ b/dports/irc/xchat2/Portfile
@@ -5,7 +5,7 @@ PortSystem          1.0
 
 name                xchat2
 version             2.8.8
-revision            1
+revision            2
 set branch          [join [lrange [split ${version} .] 0 1] .]
 categories          irc
 maintainers         afb openmaintainer
@@ -21,28 +21,26 @@ master_sites        http://xchat.org/files/source/${branch}/
 patch_sites         http://xchat.org/files/source/${branch}/patches/
 
 distname            xchat-${version}
-
-patchfiles          patch-gtk2.19.7.diff
-
-checksums           xchat-${version}.tar.bz2 \
-                    md5     6775c44f38e84d06c06c336b32c4a452 \
-                    sha1    a4ac161e4e40f4bbabc492675a1ff4380dba8d68 \
-                    rmd160  1bc3e0ff00e15c83588dd21a3ef3e8e34f953331 \
-                    sha256  0d6d69437b5e1e45f3e66270fe369344943de8a1190e498fafa5296315a27db0
-
 use_bzip2           yes
 
+checksums           md5     6775c44f38e84d06c06c336b32c4a452 \
+                    sha1    a4ac161e4e40f4bbabc492675a1ff4380dba8d68 \
+                    rmd160  1bc3e0ff00e15c83588dd21a3ef3e8e34f953331
+
+depends_build       port:pkgconfig
 depends_lib         port:gtk2 path:bin/perl:perl5
 
+patchfiles          patch-gtk2.19.7.diff
 patch.pre_args      -p1
 
-configure.args      --disable-python --disable-mmx --enable-ipv6
+configure.args      --disable-python --disable-mmx --enable-ipv6 --disable-openssl
 
-variant xft conflicts quartz { 
+variant xft conflicts quartz description "Enable Xft2 font support" { 
     configure.args-append --enable-xft
 }
 
-variant ssl { 
+variant ssl description "Enable SSL using openssl" {
+    configure.args-delete --disable-openssl
     configure.args-append --enable-openssl
     depends_lib-append port:openssl
 }
