sysutils/john: Do not force executable bit on documentation files
git-svn-id: https://svn.macports.org/repository/macports/trunk@69663 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/sysutils/john/Portfile
+++ b/dports/sysutils/john/Portfile
@@ -4,6 +4,7 @@ PortSystem          1.0
 
 name                john
 version             1.7.3.4
+revision            1
 categories          sysutils security
 maintainers         nomaintainer
 description         Featureful Unix password cracker
@@ -76,11 +77,11 @@ switch ${configure.build_arch} {
 
 destroot {
     file copy ${worksrcpath}/run ${destroot}${prefix}/share/john
-    system "chmod -R a+rx ${destroot}${prefix}/share/john"
+    system "chmod -R a+rX ${destroot}${prefix}/share/john"
     system "ln -s ${prefix}/share/john/john ${destroot}${prefix}/bin/john"
     xinstall -d ${destroot}${prefix}/share/doc
     file copy ${worksrcpath}/doc ${destroot}${prefix}/share/doc/john
-    system "chmod -R a+rx ${destroot}${prefix}/share/doc/john"
+    system "chmod -R a+rX ${destroot}${prefix}/share/doc/john"
 }
 
 notes "You'll find the john files under ${prefix}/share/john/"
