update to 2.01080604 add patches so p5-math-pari will compile (in perl scripts) on 10.5 i368.
git-svn-id: https://svn.macports.org/repository/macports/trunk@69667 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/perl/p5-math-pari/Portfile
+++ b/dports/perl/p5-math-pari/Portfile
@@ -4,13 +4,23 @@
 PortSystem          1.0
 PortGroup           perl5 1.0
 
-perl5.setup         Math-Pari 2.010801
+perl5.setup         Math-Pari 2.01080604
 maintainers         nomaintainer
 description         perl interface to pari.
 long_description    ${description}
 
 platforms           darwin
 
-checksums           md5     c0628a5ad79a53a22188aca476ea45ce \
-                    sha1    9becc6cbbb80983408de7b3f33e7f19a8015cc34 \
-                    rmd160  72af931cd38b3d2e7bb158bbbe6221292dfe07e1
+checksums           md5     27f5999671fe2a29cfd2e8c8a1f9308e \
+                    sha1    547474a4ba2c2bb0ca89d34e85ad1e58f2b64873 \
+                    rmd160  05a9ea99adf21a1011c37d0fd4e5caa58b981150
+
+post-patch {
+	file copy ${filespath}/patch-pari-2-1-7_src_kernel_ix86_level0.h.diff ${worksrcpath}/patches/
+}
+
+platform darwin 9 i386 {
+	patchfiles-append	patch_libPARI_Makefile.PL.diff	\
+				patch_utils_Math_PariBuild.pm.diff	\
+				patch-MANIFEST.diff
+}
