curl-ca-bundle: install the crt file without the execute bit; see #25661
git-svn-id: https://svn.macports.org/repository/macports/trunk@69668 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/net/curl-ca-bundle/Portfile
+++ b/dports/net/curl-ca-bundle/Portfile
@@ -5,6 +5,7 @@ PortSystem              1.0
 name                    curl-ca-bundle
 # keep the version in sync with the curl port
 version                 7.21.0
+revision                1
 set curl_name           curl
 categories              net
 maintainers             ryandesign
@@ -72,7 +73,7 @@ post-extract {
 destroot {
     set ca_bundle_dir ${destroot}${prefix}/share/curl
     xinstall -d ${ca_bundle_dir}
-    xinstall ${worksrcpath}/lib/ca-bundle.crt ${ca_bundle_dir}/curl-ca-bundle.crt
+    xinstall -m 644 ${worksrcpath}/lib/ca-bundle.crt ${ca_bundle_dir}/curl-ca-bundle.crt
 }
 
 livecheck.type          regex
