gettext: don't install documentation files with the execute bit; see #25661
git-svn-id: https://svn.macports.org/repository/macports/trunk@69669 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/devel/gettext/Portfile
+++ b/dports/devel/gettext/Portfile
@@ -6,6 +6,7 @@ PortGroup               archcheck 1.0
 
 name                    gettext
 version                 0.18.1.1
+revision                1
 categories              devel
 maintainers             ryandesign
 license                 GPLv3
@@ -57,7 +58,7 @@ post-destroot {
     if {[file exists ${destroot}${prefix}/share/locale/locale.alias]} {
         delete ${destroot}${prefix}/share/locale/locale.alias
     }
-    xinstall -W ${worksrcpath} \
+    xinstall -m 644 -W ${worksrcpath} \
         AUTHORS \
         COPYING \
         ChangeLog \
