freetype: update to 2.4.0 and don't use a versioned documentation directory. The bytecode variant disappears because the TrueType hinting algorithm patents have expired, so the bytecode interpreter is now always on; see http://www.freetype.org/patents.html
git-svn-id: https://svn.macports.org/repository/macports/trunk@69673 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/print/freetype/Portfile
+++ b/dports/print/freetype/Portfile
@@ -5,7 +5,7 @@ PortGroup               muniversal 1.0
 PortGroup               archcheck 1.0
 
 name                    freetype
-version                 2.3.12
+version                 2.4.0
 categories              print graphics
 maintainers             ryandesign
 license                 freetype/GPLv2
@@ -37,13 +37,13 @@ distfiles-append \
 
 checksums \
     [suffix ${distname}] \
-        md5     e974a82e5939be8e05ee65f07275d7c5 \
-        sha1    ebf0438429c0bedd310059326d91646c3c91016b \
-        rmd160  57437a2bc0d85859cff2ca1253b36e64629397a1 \
+        md5     6dd4b655bf711f64562198b63b073032 \
+        sha1    4cbb92847b90da5babdaaab260cc09e801a60e74 \
+        rmd160  f51988f58d882ca213b72492f2033b7e07f82f65 \
     [suffix ${docdistfile}] \
-        md5     2788beb4e1ee01bad8ed9978c0630e86 \
-        sha1    4f3b2d0f04f23d5430dac4252fc225831c29dd18 \
-        rmd160  27c3b4f68b9d560060532f1041e9b8c0a574d4f6
+        md5     6ef5730cca14234151ca6116f676935e \
+        sha1    f448e48e9791d6e39be6aed86a768e733c504bd2 \
+        rmd160  13a29512f7c26354406c9efe569cd8edda7d1f5f
 
 patchfiles \
     patch-detect.mk.diff \
@@ -73,8 +73,7 @@ platform macosx {
     }
 }
 
-set docdir \
-    ${prefix}/share/doc/${name}-${version}
+set docdir              ${prefix}/share/doc/${name}
 
 post-destroot {
     xinstall -m 0755 -d ${destroot}${docdir}
@@ -88,7 +87,6 @@ post-destroot {
         FTL.TXT \
         GPL.TXT \
         LICENSE.TXT \
-        PATENTS \
         PROBLEMS \
         TODO \
         formats.txt \
@@ -99,24 +97,6 @@ post-destroot {
     xinstall -m 0644 -W ${worksrcpath}/docs ft2faq.html ${destroot}${docdir}/html
     foreach dir {design glyphs reference tutorial} {
         copy ${worksrcpath}/docs/${dir} ${destroot}${docdir}/html
-    }
-}
-
-variant bytecode description {Include patented TrueType bytecode interpreter} {
-    pre-extract {
-        ui_warn "The +bytecode variant causes FreeType's TrueType driver to be
-compiled with a bytecode interpreter that produces better-looking output
-than the default auto-hinting method. However, the methods used by the
-bytecode interpreter are patented by Apple Inc. Only use this variant if
-you have purchased a license from Apple or live in a country where Apple's
-patents to this technology do not apply. For more information, please read:
-http://www.freetype.org/patents.html"
-    }
-    patchfiles-append \
-        patch-ftoption.h
-    
-    post-destroot {
-        xinstall -m 0644 -W ${worksrcpath}/docs TRUETYPE ${destroot}${docdir}
     }
 }
 
