put files into site-lib directory, not in top-level; add META file so that ocamlfind works for this lib; increase revision;
git-svn-id: https://svn.macports.org/repository/macports/trunk@69674 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/devel/xml-light/Portfile
+++ b/dports/devel/xml-light/Portfile
@@ -1,8 +1,10 @@
 # $Id$
 
 PortSystem          1.0
+
 name                xml-light
 version             2.2
+revision            1
 categories          devel textproc
 maintainers         recoil.org:anil
 description         Objective Caml interface for XML parsing and printing
@@ -10,7 +12,7 @@ long_description    XML Light is a minimal XML parser & printer for OCaml.\
                     It provide functions to parse an XML document into an OCaml \
                     data structure, work with it, and print it back to an XML \
                     document.
-homepage            http://tech.motion-twin.com/xmllight/
+homepage            http://tech.motion-twin.com/xmllight
 use_configure       no
 platforms           darwin
 master_sites        http://tech.motion-twin.com/zip/
@@ -19,12 +21,13 @@ worksrcdir          ${name}
 use_parallel_build  no
 build.target        all opt
 checksums           md5 7658985cfdaeeb94b579b932eeaa3e00
-depends_lib         bin:camlp4:ocaml
-set instdir         ${destroot}${prefix}/lib/ocaml/
+depends_lib         port:ocaml
+set instdir         ${destroot}${prefix}/lib/ocaml/site-lib/xml-light
 destroot.args       INSTALLDIR=${instdir}
 pre-destroot {
         file mkdir ${instdir}
 }
 post-destroot {
         system "ranlib ${instdir}/xml-light.a"
+	xinstall -m 644 ${filespath}/META ${instdir}/
 }
