sysutils/john, sysutils/john-devel: Add conflicts with each other
git-svn-id: https://svn.macports.org/repository/macports/trunk@69677 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/sysutils/john-devel/Portfile
+++ b/dports/sysutils/john-devel/Portfile
@@ -3,6 +3,7 @@
 PortSystem          1.0
 
 name                john-devel
+conflicts           john
 version             1.7.3.4
 revision            1
 categories          sysutils security
