--- a/dports/sysutils/john/Portfile
+++ b/dports/sysutils/john/Portfile
@@ -3,6 +3,7 @@
 PortSystem          1.0
 
 name                john
+conflicts           john-devel
 version             1.7.3.4
 revision            1
 categories          sysutils security
