xbitmaps: noarch, license
git-svn-id: https://svn.macports.org/repository/macports/trunk@69678 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/x11/xbitmaps/Portfile
+++ b/dports/x11/xbitmaps/Portfile
@@ -3,12 +3,15 @@
 PortSystem          1.0
 name                xbitmaps
 version             1.1.0
+revision            1
 categories          x11 graphics
 maintainers         jeremyhu openmaintainer
 description         Bitmaps that are shared between X applications
 long_description    ${description}
 
 platforms           darwin
+supported_archs     noarch
+license             MIT
 
 homepage            http://www.x.org/
 master_sites        http://xorg.freedesktop.org/archive/individual/data/
@@ -26,4 +29,3 @@ post-destroot {
 livecheck.type      regex
 livecheck.regex     ${name}-(\[\\d.\]+)${extract.suffix}
 livecheck.url       ${master_sites}
-
