qrupdate: gcc needs to be in depends_lib (didn't check g95)
git-svn-id: https://svn.macports.org/repository/macports/trunk@69685 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/math/qrupdate/Portfile
+++ b/dports/math/qrupdate/Portfile
@@ -73,14 +73,14 @@ variant g95 conflicts gcc43 gcc44 universal description {build with g95} {
 }
 
 variant gcc43 conflicts g95 gcc44 universal description {build with gcc43 fortran} {
-    depends_build-append    port:gcc43
+    depends_lib-append    port:gcc43
     post-patch {
         reinplace "s|gfortran|gfortran-mp-4.3|" ${worksrcpath}/Makeconf
     }
 }
 
 variant gcc44 conflicts g95 gcc43 description {build with gcc44 fortran} {
-    depends_build-append    port:gcc44
+    depends_lib-append    port:gcc44
     post-patch {
         reinplace "s|gfortran|gfortran-mp-4.4|" ${worksrcpath}/Makeconf
     }
