--- a/dports/perl/p5-math-pari/Portfile
+++ b/dports/perl/p5-math-pari/Portfile
@@ -16,11 +16,12 @@ checksums           md5     27f5999671fe2a29cfd2e8c8a1f9308e \
                     rmd160  05a9ea99adf21a1011c37d0fd4e5caa58b981150
 
 post-patch {
-	file copy ${filespath}/patch-pari-2-1-7_src_kernel_ix86_level0.h.diff ${worksrcpath}/patches/
+	file copy ${filespath}/patch-pari-2_1_7-src-kernel-ix86-level0.h.diff ${worksrcpath}/patches/
 }
 
 platform darwin 9 i386 {
-	patchfiles-append	patch_libPARI_Makefile.PL.diff	\
-				patch_utils_Math_PariBuild.pm.diff	\
+	patchfiles-append	\
+                patch-libPARI-Makefile.PL.diff  \
+                patch-utils-Math-PariBuild.pm.diff  \
 				patch-MANIFEST.diff
 }
