--- a/dports/graphics/jpeg/Portfile
+++ b/dports/graphics/jpeg/Portfile
@@ -3,7 +3,7 @@
 PortSystem	1.0
 
 name		jpeg
-version     	8a
+version     	8b
 categories	graphics
 maintainers	waqar
 description	Library for manipulating JPEG images
@@ -26,15 +26,12 @@ master_sites    http://www.ijg.org/files/ \
 distname        ${name}src.v${version}
 worksrcdir      ${name}-${version}
                 
-checksums       md5     5146e68be3633c597b0d14d3ed8fa2ea \
-                sha1    78077fb22f0b526a506c21199fbca941d5c671a9 \
-                rmd160  cdf6c356ea1a631e37256893e80206ad6ecc3fab
+checksums       md5     e022acbc5b36cd2cb70785f5b575661e \
+                sha1    15dc1939ea1a5b9d09baea11cceb13ca59e4f9df \
+                rmd160  18d31a26c447564c258a6f6357e9002536c9ab96
 
 configure.ldflags-delete	-L${prefix}/lib
 configure.cppflags-delete	-I${prefix}/include
-if {![variant_isset universal]} {
-    configure.ldflags-append   ${configure.cc_archflags}
-}
 
 livecheck.type  regex
 livecheck.url   [lindex $master_sites 0]/?M=D
