--- a/dports/java/tomcat6/Portfile
+++ b/dports/java/tomcat6/Portfile
@@ -4,7 +4,7 @@
 PortSystem 1.0
 
 name				tomcat6
-version				6.0.20
+version				6.0.28
 
 categories			java www
 maintainers			ricci openmaintainer
@@ -19,10 +19,10 @@ homepage			http://tomcat.apache.org/
 distname			apache-tomcat-${version}-src
 master_sites		apache:tomcat/tomcat-6/v${version}/src/
 
-checksums           md5     44f49e7e14028b6a53c3c346bd18c72f \
-                    sha1    ab538484d8d05c83a69c70ab6bf07606282633d8 \
-                    rmd160  65b1b56132c03855e352e44a24b761bccd65b90c
-					
+checksums           md5     fb36ed47cb358006a29e1a86037356df \
+                    sha1    0df5e58518607ff738bbf440d829747df6acb9ce \
+                    rmd160  4a699324f332b8c32fa79615f14681a0fa9924b1
+
 patchfiles			patch-bin-catalina.sh	\
 					patch-build.xml.diff
 
@@ -48,8 +48,9 @@ depends_lib			bin:java:kaffe \
 					port:jakarta-log4j \
 					port:mx4j \
 					port:junit \
-					port:jaxen \
 					port:saxpath
+
+##					port:jaxen \
 				
 set javaLibs		${prefix}/share/java
 set home			share/java/tomcat6
@@ -84,11 +85,11 @@ set antArgs		 [join "
 					-Dlog4j.jar=${javaLibs}/jakarta-log4j.jar
 					-Djmx.lib=${javaLibs}
 					-Djunit.jar=${javaLibs}/junit.jar
-					-Djaxen.jar=${javaLibs}/jaxen.jar
 					-Dsaxpath.jar=${javaLibs}/saxpath.jar
 					-Djasper.home=${worksrcpath}/../jasper
 					"]
 #					-Dstruts.lib=${javaLibs}/struts/lib
+##					-Djaxen.jar=${javaLibs}/jaxen.jar
 
 build.args			$antArgs
 
