xorg-server-devel: Fix a possible memory corruption issue on ppc
git-svn-id: https://svn.macports.org/repository/macports/trunk@69690 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/x11/xorg-server-devel/Portfile
+++ b/dports/x11/xorg-server-devel/Portfile
@@ -5,6 +5,7 @@ PortSystem 1.0
 name		xorg-server-devel
 set my_name	xorg-server
 version		1.8.99.904
+revision        1
 categories	x11 devel
 maintainers	jeremyhu openmaintainer
 description	The X.org / Xquartz X server.
@@ -82,6 +83,7 @@ configure.env-append \
 	RAWCPP=${configure.cpp}
 
 patchfiles \
+        0025-XQuartz-Avoid-a-crash-when-mistakenly-free-ing-in-Qu.patch \
         0005-XQuartz-Remove-some-dead-code.patch \
         0006-Workaround-the-GC-clipping-problem-in-miPaintWindow-.patch \
         0007-fb-Revert-fb-changes-that-broke-XQuartz.patch
