--- a/dports/sysutils/rlwrap/Portfile
+++ b/dports/sysutils/rlwrap/Portfile
@@ -3,8 +3,9 @@
 PortSystem 1.0
 
 name                    rlwrap
-version                 0.36
+version                 0.37
 categories              sysutils
+license                 GPL-2+
 maintainers             mac.com:lomion
 description             rlwrap is a readline wrapper.
 long_description        rlwrap is a 'readline wrapper' that uses the  GNU \
@@ -14,9 +15,9 @@ homepage                http://utopia.knoware.nl/~hlub/uck/rlwrap/
 platforms               darwin
 master_sites            ${homepage} \
                             http://gentoo.osuosl.org/distfiles/
-checksums               md5     f3d687658336789d5155322abcc84a7f \
-                        sha1    9cc2007127ba2e368c2a4be0f2f30a818ee6b39a \
-                        rmd160  ff59f7fd6845c1e533094ff6fcfc708b7065a932
+checksums               md5     04cd6e2c257eb5a86b297f2ebf91dbbf \
+                        sha1    c8fc5e7798a7c618a22583c56fa38d344700cc2f \
+                        rmd160  4e229e8fed579002605919760b313651aa427870
 depends_lib             port:readline
 
 configure.args          --mandir=${prefix}/share/man
