pcre: update to 8.10 (#25584), remove muniversal, remove redundant dependency
git-svn-id: https://svn.macports.org/repository/macports/trunk@69697 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/devel/pcre/Portfile
+++ b/dports/devel/pcre/Portfile
@@ -2,10 +2,9 @@
 # $Id$
 
 PortSystem      1.0
-PortGroup       muniversal 1.0
 
 name            pcre
-version         7.9
+version         8.10
 categories      devel
 platforms       darwin freebsd
 maintainers     nox openmaintainer
@@ -25,13 +24,12 @@ master_sites    ftp://ftp.fu-berlin.de/unix/misc/${name}/ \
                 ftp://ftp.csx.cam.ac.uk/pub/software/programming/${name}/ \
                 sourceforge
 
-checksums       md5     b6a9669d1863423f01ea46cdf00f93dc \
-                sha1    a4a34f71313ac042455355c01ad851791971a7fa \
-                rmd160  e7ccae1fe3d2cf3ff3264c6e6ad3486c64fe1cec
+checksums       md5     780867a700e9d4e4b9cb47aa5453e4b2 \
+                sha1    8b345da0f835b2caabff071b0b5bab40564652be \
+                rmd160  2d54068777d5c7119871b3afdeaf64cfb37d8df2
 
 depends_lib     port:readline \
                 port:zlib \
-                port:ncurses \
                 port:bzip2
 
 configure.args  --docdir=${prefix}/share/doc/${name}-${version} \
@@ -40,8 +38,11 @@ configure.args  --docdir=${prefix}/share/doc/${name}-${version} \
                 --enable-pcregrep-libz \
                 --enable-pcregrep-libbz2
 
-foreach arch ${universal_archs} {
-    lappend merger_configure_ldflags(${arch}) -lncurses
+platform darwin 8 {
+    # ticket #18448
+    if {[variant_isset universal]} {
+        configure.ldflags-append -lncurses
+    }
 }
 
 post-patch {
