cyrus-sasl2: don't clobber patchfile that fixes #17328
git-svn-id: https://svn.macports.org/repository/macports/trunk@69699 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/security/cyrus-sasl2/Portfile
+++ b/dports/security/cyrus-sasl2/Portfile
@@ -28,11 +28,10 @@ checksums		md5 2eb0e48106f0e9cd8001e654f267ecbc \
 depends_lib		port:openssl \
 				port:zlib
 
-patchfiles		patch-utils_Makefile.in.diff
-
 default_variants	+kerberos
 
-patchfiles		patch-config_ltconfig
+patchfiles		patch-config_ltconfig \
+                patch-utils_Makefile.in.diff
 
 configure.args \
 		--mandir=${prefix}/share/man \
